--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
-    body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:20px; }
+    body { font-family: Arial, sans-serif; background: linear-gradient(135deg, #0a2342, #145da0);
+ }
     .wrap { max-width:1100px; margin:auto; display:flex; gap:20px; }
     .panel, .card { background:#fff; padding:16px; border-radius:10px; }
     .panel { width:360px; }
