--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
-    body { font-family: Arial, sans-serif; background: background: linear-gradient(135deg, #f2c94c, #111111);
+    body { font-family: Arial, sans-serif; background: linear-gradient(135deg, #f2c94c, #111111);
     }
     .wrap { max-width:1100px; margin:auto; display:flex; gap:20px; }
     .panel, .card { background:#fff; padding:16px; border-radius:10px; }
