--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
+    .club-badge {
+  width: 80px;
+  display: block;
+  margin-bottom: 10px;
+}
     body { font-family: Arial, sans-serif; background: linear-gradient(135deg, #f2c94c, #111111);
     }
     .wrap { max-width:1100px; margin:auto; display:flex; gap:20px; }
@@ -87,6 +92,7 @@
 
   <!-- RIGHT CARD -->
   <div class="card">
+    <img src="badge.png" class="club-badge">
     <h1 id="cardName">Unnamed Player</h1>
     <p id="cardInfo"></p>
 
