--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <!-- RIGHT CARD -->
   <div class="card">
-    <img src="badge.png" class="club-badge">
+    <img src="./badge.jpeg" alt="Club badge" style="width:80px; display:block; margin-bottom:10px;">
     <h1 id="cardName">Unnamed Player</h1>
     <p id="cardInfo"></p>
 
