--- a/index.html
+++ b/index.html
@@ -8,25 +8,42 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
+    /* ✅ Theme variables (so team backgrounds are easy later) */
+    :root{
+      --bg1:#f2c94c;  /* yellow */
+      --bg2:#111111;  /* black */
+    }
+
     .club-badge {
-  width: 80px;
-  display: block;
-  margin-bottom: 10px;
-}
-    body { font-family: Arial, sans-serif; background: linear-gradient(135deg, #f2c94c, #111111);
+      width: 80px;
+      display: block;
+      margin-bottom: 10px;
     }
-    .wrap { max-width:1100px; margin:auto; display:flex; gap:20px; }
-    .panel, .card { background:#fff; padding:16px; border-radius:10px; }
-    .panel { width:360px; }
+
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, var(--bg1), var(--bg2));
+      color: #333;
+    }
+
+    .wrap { max-width:1100px; margin:auto; display:flex; gap:20px; padding:20px; }
+    .panel, .card { background:#fff; padding:20px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.15); }
+    .panel { width:380px; }
     .card { flex:1; }
-    label { font-size:13px; display:block; margin-top:10px; }
+    label { font-size:13px; display:block; margin-top:12px; font-weight:bold; }
     input, textarea, select, button {
-      width:100%; padding:8px; margin-top:5px; box-sizing:border-box;
+      width:100%; padding:9px; margin-top:4px; box-sizing:border-box; border:1px solid #ccc; border-radius:4px;
     }
-    button { cursor:pointer; }
-    .row { display:flex; gap:16px; margin-top:16px; }
-    .box { flex:1; }
+    input[type="range"] { width:70%; vertical-align:middle; }
+    .range-value { font-size:13px; margin-left:10px; font-weight:bold; color:#4CAF50; }
+    button { cursor:pointer; background:#4CAF50; color:white; border:none; padding:10px; border-radius:5px; margin-top:8px; }
+    button:hover { background:#45a049; }
+    .row { display:flex; gap:16px; margin:20px 0; }
+    .box { flex:1; min-height:300px; }
     .hidden { display:none; }
+    fieldset { margin:16px 0; padding:12px; border:1px solid #ddd; border-radius:6px; }
+    legend { font-weight:bold; color:#333; }
+    h3 { margin-top:24px; color:#111; }
   </style>
 </head>
 
@@ -51,6 +68,16 @@
     <hr>
 
     <div id="editor" class="hidden">
+
+      <!-- ✅ NEW: Team dropdown (single team for now) -->
+      <label>Team</label>
+      <select id="team">
+        <option value="livi">Livingston</option>
+      </select>
+
+      <label>Date of Report</label>
+      <input id="reportDate" type="date" />
+
       <label>Player Name</label>
       <input id="name" />
 
@@ -60,26 +87,88 @@
       <label>Position</label>
       <input id="pos" />
 
-      <label>Passing</label>
-      <input id="passing" type="number" min="0" max="100" value="0" />
+      <label>Maturation Stage</label>
+      <select id="maturation">
+        <option value="">-- Select --</option>
+        <option value="Early">Early</option>
+        <option value="Average">Average</option>
+        <option value="Late">Late</option>
+      </select>
 
-      <label>Control</label>
-      <input id="control" type="number" min="0" max="100" value="0" />
+      <!-- Technical -->
+      <fieldset>
+        <legend>Technical Skills (Avg: <span id="techAvg">0</span>/100)</legend>
+        <label>Passing</label>
+        <input type="range" id="passing" min="0" max="100" value="0" /><span id="passingVal" class="range-value">0</span>
+        <label>Control / First Touch</label>
+        <input type="range" id="control" min="0" max="100" value="0" /><span id="controlVal" class="range-value">0</span>
+        <label>Dribbling / Manipulation</label>
+        <input type="range" id="dribbling" min="0" max="100" value="0" /><span id="dribblingVal" class="range-value">0</span>
+        <label>Shooting / Finishing</label>
+        <input type="range" id="shooting" min="0" max="100" value="0" /><span id="shootingVal" class="range-value">0</span>
+        <label>Heading / Aerial</label>
+        <input type="range" id="heading" min="0" max="100" value="0" /><span id="headingVal" class="range-value">0</span>
+        <label>Receiving / Trapping</label>
+        <input type="range" id="receiving" min="0" max="100" value="0" /><span id="receivingVal" class="range-value">0</span>
+        <label>Crossing / Delivery</label>
+        <input type="range" id="crossing" min="0" max="100" value="0" /><span id="crossingVal" class="range-value">0</span>
+      </fieldset>
 
-      <label>Dribbling</label>
-      <input id="dribbling" type="number" min="0" max="100" value="0" />
+      <!-- Tactical -->
+      <fieldset>
+        <legend>Tactical Intelligence (Avg: <span id="tactAvg">0</span>/100)</legend>
+        <label>Positioning</label>
+        <input type="range" id="positioning" min="0" max="100" value="0" /><span id="positioningVal" class="range-value">0</span>
+        <label>Decision Making</label>
+        <input type="range" id="decisionMaking" min="0" max="100" value="0" /><span id="decisionMakingVal" class="range-value">0</span>
+        <label>Vision / Game Reading</label>
+        <input type="range" id="vision" min="0" max="100" value="0" /><span id="visionVal" class="range-value">0</span>
+        <label>Off-the-Ball Movement</label>
+        <input type="range" id="offBall" min="0" max="100" value="0" /><span id="offBallVal" class="range-value">0</span>
+        <label>Pressing / Recovery</label>
+        <input type="range" id="pressing" min="0" max="100" value="0" /><span id="pressingVal" class="range-value">0</span>
+        <label>Tactical Awareness</label>
+        <input type="range" id="tacticalAwareness" min="0" max="100" value="0" /><span id="tacticalAwarenessVal" class="range-value">0</span>
+      </fieldset>
 
-      <label>Defending</label>
-      <input id="defending" type="number" min="0" max="100" value="0" />
+      <!-- Physical -->
+      <fieldset>
+        <legend>Physical Attributes (Avg: <span id="physAvg">0</span>/100)</legend>
+        <label>Speed / Acceleration</label>
+        <input type="range" id="speed" min="0" max="100" value="0" /><span id="speedVal" class="range-value">0</span>
+        <label>Agility / Change of Direction</label>
+        <input type="range" id="agility" min="0" max="100" value="0" /><span id="agilityVal" class="range-value">0</span>
+        <label>Endurance / Stamina</label>
+        <input type="range" id="endurance" min="0" max="100" value="0" /><span id="enduranceVal" class="range-value">0</span>
+        <label>Strength / Power</label>
+        <input type="range" id="strength" min="0" max="100" value="0" /><span id="strengthVal" class="range-value">0</span>
+        <label>Balance / Coordination</label>
+        <input type="range" id="balance" min="0" max="100" value="0" /><span id="balanceVal" class="range-value">0</span>
+      </fieldset>
 
-      <label>Speed</label>
-      <input id="speed" type="number" min="0" max="100" value="0" />
-
-      <label>Effort</label>
-      <input id="effort" type="number" min="0" max="100" value="0" />
+      <!-- Psychological & Social -->
+      <fieldset>
+        <legend>Psychological & Social (Avg: <span id="psychAvg">0</span>/100)</legend>
+        <label>Effort / Work Ethic</label>
+        <input type="range" id="effort" min="0" max="100" value="0" /><span id="effortVal" class="range-value">0</span>
+        <label>Concentration / Focus</label>
+        <input type="range" id="concentration" min="0" max="100" value="0" /><span id="concentrationVal" class="range-value">0</span>
+        <label>Composure under Pressure</label>
+        <input type="range" id="composure" min="0" max="100" value="0" /><span id="composureVal" class="range-value">0</span>
+        <label>Teamwork / Communication</label>
+        <input type="range" id="teamwork" min="0" max="100" value="0" /><span id="teamworkVal" class="range-value">0</span>
+        <label>Coachability / Attitude</label>
+        <input type="range" id="coachability" min="0" max="100" value="0" /><span id="coachabilityVal" class="range-value">0</span>
+        <label>Resilience / Determination</label>
+        <input type="range" id="resilience" min="0" max="100" value="0" /><span id="resilienceVal" class="range-value">0</span>
+      </fieldset>
 
       <label>Coach Comment</label>
-      <textarea id="comment"></textarea>
+      <textarea id="comment" rows="5"></textarea>
+
+      <div style="margin:20px 0; font-size:18px; font-weight:bold;">
+        Overall Development Score: <span id="overallScore">0</span>/100
+      </div>
 
       <button id="saveBtn" type="button">Save Player</button>
 
@@ -92,7 +181,7 @@
 
   <!-- RIGHT CARD -->
   <div class="card">
-    <img src="./badge.jpg" alt="Club badge" style="width:80px; display:block; margin-bottom:10px;">
+    <img src="badge.jpg" alt="Club badge" class="club-badge">
     <h1 id="cardName">Unnamed Player</h1>
     <p id="cardInfo"></p>
 
@@ -100,6 +189,9 @@
       <div class="box"><canvas id="radar"></canvas></div>
       <div class="box"><canvas id="bars"></canvas></div>
     </div>
+
+    <h3>Pillar Overview (Holistic Balance)</h3>
+    <canvas id="pillarRadar" style="max-height:400px;"></canvas>
 
     <h3>Coach Comment</h3>
     <p id="cardComment"></p>
@@ -110,33 +202,71 @@
 <script type="module">
   import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-  // 🔴 REPLACE THESE WITH YOUR OWN VALUES
-  const SUPABASE_URL = "https://wzqxgudtgveumnqeowvn.supabase.co";
-  const SUPABASE_KEY = "sb_publishable_U8aSfR1_823cZQ9_bxhRsg_AMfRKgqI";
+  // ✅ Put YOUR values back in here
+  const SUPABASE_URL = "PASTE_YOUR_SUPABASE_URL_HERE";
+  const SUPABASE_KEY = "PASTE_YOUR_SUPABASE_PUBLISHABLE_KEY_HERE";
 
   const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
   const $ = id => document.getElementById(id);
-  const num = id => Number($(id).value || 0);
+  const num = id => Number($(id)?.value || 0);
 
-  // Charts
+  // ✅ NEW: Single-team theme config (test mode)
+  const TEAMS = {
+    livi: { badge: "badge.jpg", bg1:"#f2c94c", bg2:"#111111" }
+  };
+
+  function applyTeam(teamKey){
+    const t = TEAMS[teamKey] || TEAMS.livi;
+
+    // background
+    document.documentElement.style.setProperty("--bg1", t.bg1);
+    document.documentElement.style.setProperty("--bg2", t.bg2);
+
+    // badge
+    const badgeEl = document.querySelector(".club-badge");
+    if (badgeEl) badgeEl.src = t.badge;
+  }
+
+  // ─────────────── Charts ───────────────
+
   const radar = new Chart($("radar"), {
-    type:"radar",
-    data:{
-      labels:["Passing","Control","Dribbling","Defending","Speed","Effort"],
-      datasets:[{ data:[0,0,0,0,0,0] }]
+    type: "radar",
+    data: {
+      labels: ["Passing","Control","Dribbling","Defending","Speed","Effort"],
+      datasets: [{ data: [0,0,0,0,0,0], backgroundColor: "rgba(76,175,80,0.2)", borderColor: "#4CAF50" }]
     },
-    options:{ scales:{ r:{ min:0, max:100 } }, plugins:{ legend:{ display:false } } }
+    options: { scales: { r: { min:0, max:100 } }, plugins: { legend: { display: false } } }
   });
 
   const bars = new Chart($("bars"), {
-    type:"bar",
-    data:{
-      labels:["Passing","Speed","Effort"],
-      datasets:[{ data:[0,0,0] }]
+    type: "bar",
+    data: {
+      labels: ["Passing","Speed","Effort"],
+      datasets: [{ data: [0,0,0], backgroundColor: "#4CAF50" }]
     },
-    options:{ indexAxis:"y", scales:{ x:{ min:0, max:100 } }, plugins:{ legend:{ display:false } } }
+    options: { indexAxis: "y", scales: { x: { min:0, max:100 } }, plugins: { legend: { display: false } } }
   });
+
+  const pillarRadar = new Chart($("pillarRadar"), {
+    type: "radar",
+    data: {
+      labels: ["Technical", "Tactical", "Physical", "Psych & Social"],
+      datasets: [{
+        label: "Pillar Averages",
+        data: [0,0,0,0],
+        backgroundColor: "rgba(33,150,243,0.2)",
+        borderColor: "#2196F3",
+        borderWidth: 2
+      }]
+    },
+    options: {
+      scales: { r: { min:0, max:100, ticks: { stepSize: 20 } } },
+      plugins: { legend: { display: false } }
+    }
+  });
+
+  // ─────────────── Update Functions ───────────────
 
   function updateCard() {
     $("cardName").textContent = $("name").value || "Unnamed Player";
@@ -153,10 +283,63 @@
       num("passing"), num("speed"), num("effort")
     ];
     bars.update();
+
+    calculateAverages();
   }
 
-  ["name","age","pos","passing","control","dribbling","defending","speed","effort","comment"]
-    .forEach(id => $(id).addEventListener("input", updateCard));
+  function calculateAverages() {
+    const techSum = num("passing") + num("control") + num("dribbling") + num("shooting") +
+                    num("heading") + num("receiving") + num("crossing");
+    const techAvg = Math.round(techSum / 7);
+    $("techAvg").textContent = techAvg;
+
+    const tactSum = num("positioning") + num("decisionMaking") + num("vision") +
+                    num("offBall") + num("pressing") + num("tacticalAwareness");
+    const tactAvg = Math.round(tactSum / 6);
+    $("tactAvg").textContent = tactAvg;
+
+    const physSum = num("speed") + num("agility") + num("endurance") +
+                    num("strength") + num("balance");
+    const physAvg = Math.round(physSum / 5);
+    $("physAvg").textContent = physAvg;
+
+    const psychSum = num("effort") + num("concentration") + num("composure") +
+                     num("teamwork") + num("coachability") + num("resilience");
+    const psychAvg = Math.round(psychSum / 6);
+    $("psychAvg").textContent = psychAvg;
+
+    const overall = Math.round((techAvg + tactAvg + physAvg + psychAvg) / 4);
+    $("overallScore").textContent = overall;
+
+    pillarRadar.data.datasets[0].data = [techAvg, tactAvg, physAvg, psychAvg];
+    pillarRadar.update();
+  }
+
+  // Live updates for all inputs
+  ["team","name","age","pos","reportDate","maturation","passing","control","dribbling","defending","speed","effort",
+   "shooting","heading","receiving","crossing","positioning","decisionMaking","vision","offBall","pressing","tacticalAwareness",
+   "agility","endurance","strength","balance","concentration","composure","teamwork","coachability","resilience","comment"]
+    .forEach(id => {
+      const el = $(id);
+      if (el) el.addEventListener("input", updateCard);
+    });
+
+  // ✅ NEW: Team dropdown should trigger theme change
+  $("team")?.addEventListener("change", () => {
+    applyTeam($("team").value);
+  });
+
+  // Range live value display
+  document.querySelectorAll('input[type="range"]').forEach(input => {
+    const valSpan = $(input.id + "Val");
+    if (valSpan) {
+      input.addEventListener("input", () => {
+        valSpan.textContent = input.value;
+      });
+    }
+  });
+
+  // ─────────────── Supabase Auth & Data ───────────────
 
   $("loginBtn").onclick = async () => {
     const { error } = await supabase.auth.signInWithPassword({
@@ -173,25 +356,46 @@
   };
 
   $("saveBtn").onclick = async () => {
+    const stats = {
+      passing: num("passing"), control: num("control"), dribbling: num("dribbling"),
+      defending: num("defending"), speed: num("speed"), effort: num("effort"),
+      shooting: num("shooting"), heading: num("heading"), receiving: num("receiving"),
+      crossing: num("crossing"), positioning: num("positioning"), decisionMaking: num("decisionMaking"),
+      vision: num("vision"), offBall: num("offBall"), pressing: num("pressing"),
+      tacticalAwareness: num("tacticalAwareness"), agility: num("agility"), endurance: num("endurance"),
+      strength: num("strength"), balance: num("balance"), concentration: num("concentration"),
+      composure: num("composure"), teamwork: num("teamwork"), coachability: num("coachability"),
+      resilience: num("resilience")
+    };
+
+    const averages = {
+      tech_avg: Number($("techAvg").textContent),
+      tact_avg: Number($("tactAvg").textContent),
+      phys_avg: Number($("physAvg").textContent),
+      psych_avg: Number($("psychAvg").textContent),
+      overall: Number($("overallScore").textContent)
+    };
+
     const { error } = await supabase.from("players").upsert({
       name: $("name").value,
       age_group: $("age").value,
       position: $("pos").value,
-      stats: {
-        passing:num("passing"), control:num("control"), dribbling:num("dribbling"),
-        defending:num("defending"), speed:num("speed"), effort:num("effort")
-      },
+      report_date: $("reportDate").value,
+      maturation: $("maturation").value,
+      stats,
+      averages,
       comment: $("comment").value
-    }, { onConflict:"name" });
+      // ✅ We are NOT saving team yet (test mode)
+    }, { onConflict: "name" });
 
     if (error) alert(error.message);
-    loadList();
+    else loadList();
   };
 
   async function loadList() {
     const { data } = await supabase.from("players").select("name").order("name");
     $("loadSelect").innerHTML = `<option value="">-- choose --</option>` +
-      (data||[]).map(p=>`<option>${p.name}</option>`).join("");
+      (data||[]).map(p => `<option>${p.name}</option>`).join("");
   }
 
   $("loadSelect").onchange = async e => {
@@ -199,12 +403,21 @@
     const { data } = await supabase
       .from("players").select("*").eq("name", e.target.value).single();
 
+    if (!data) return;
+
+    $("reportDate").value = data.report_date || "";
     $("name").value = data.name;
     $("age").value = data.age_group;
     $("pos").value = data.position;
+    $("maturation").value = data.maturation || "";
     $("comment").value = data.comment || "";
 
-    Object.entries(data.stats||{}).forEach(([k,v]) => $(k).value = v);
+    const s = data.stats || {};
+    ["passing","control","dribbling","defending","speed","effort","shooting","heading","receiving","crossing",
+     "positioning","decisionMaking","vision","offBall","pressing","tacticalAwareness","agility","endurance",
+     "strength","balance","concentration","composure","teamwork","coachability","resilience"]
+      .forEach(k => { if ($(k)) $(k).value = s[k] ?? 0; });
+
     updateCard();
   };
 
@@ -218,6 +431,9 @@
     $("logoutBtn").classList.toggle("hidden", !loggedIn);
 
     if (loggedIn) loadList();
+
+    // ✅ Apply team theme once UI exists (safe even if not logged in)
+    applyTeam($("team")?.value || "livi");
   }
 
   onAuth();
