--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
   import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
   // ✅ Put YOUR values back in here
-  const SUPABASE_URL = "PASTE_YOUR_SUPABASE_URL_HERE";
-  const SUPABASE_KEY = "PASTE_YOUR_SUPABASE_PUBLISHABLE_KEY_HERE";
+  const SUPABASE_URL = https://wzqxgudtgveumnqeowvn.supabase.co;
+  const SUPABASE_KEY = sb_publishable_U8aSfR1_823cZQ9_bxhRsg_AMfRKgqI;
 
   const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
